<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.ConnectFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/white" />

        <ProgressBar
            android:id="@+id/progress_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="8dp"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/qr_code_scan"
                app:endIconTint="@color/dark_blue"
                app:endIconScaleType="center"
                android:layout_marginHorizontal="40dp"
                style="@style/text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_connect"
                    android:singleLine="true"
                    android:textColor="@color/dark_blue"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="40dp"
                style="@style/text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_username"
                    android:singleLine="true"
                    android:textColor="@color/dark_blue"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="40dp"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_action_remove_red_eye"
                app:endIconTint="@color/dark_blue"
                style="@style/text_input">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/text_hint_password"
                    android:singleLine="true"
                    android:textColor="@color/dark_blue"
                    android:textColorHint="@color/gray" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/connectBtn"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/text_connect" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>